Fix spacing of right side of visualization and fix exception in task

--- a/IslandCompare/genomeManage/static/genomeManage/css/linearplot.css
+++ b/IslandCompare/genomeManage/static/genomeManage/css/linearplot.css
@@ -97,5 +97,5 @@ g.root.node circle{
 }
 
 body{
-    margin: 0px 0px 0px 0px;
+    margin: 0px 20px 0px 0px;
 }
